[package]
name = "dns-geolocation-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
hickory-resolver = "*"
hickory-client = "*"
hickory-proto = "*"
rand = "0.8.5"
