[package]
name = "dns-geolocation-checker"
version = "0.2.0"
edition = "2021"
description = "A tool to check the geolocation of a domain based on its DNS records."
homepage = "https://github.com/single9/dns-geolocation-checker"
repository = "https://github.com/single9/dns-geolocation-checker"
license-file = "LICENSE"
readme = "README.md"
keywords = ["tool"]

[[bin]]
name = "dns-geo-checker"
path = "src/bin/dns_geo_checker.rs"

[features]
default = ["mmdb"]
full = ["ip-api", "mmdb"]
ip-api = ["reqwest"]
mmdb = ["maxminddb"]

[dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = ["json"], optional = true}
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
hickory-resolver = "0.24.1"
hickory-client = "0.24.1"
hickory-proto = "0.24.1"
rand = "0.8.5"
futures = "0.3.30"
maxminddb = { version = "0.24.0", optional = true }
